// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkInput should apply user-styling correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
      Object {
        "backgroundColor": "blue",
        "width": 200,
      },
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`Android BpkInput should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`Android BpkInput should render disabled correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
    ]
  }
>
  <TextInput
    editable={false}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
        Object {
          "color": "rgb(230, 228, 235)",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`Android BpkInput should render invalid correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
      undefined,
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkInput should render placeholder correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
        Object {
          "fontStyle": "italic",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`Android BpkInput should render small correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
      Object {
        "height": 32,
        "padding": 8,
      },
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`Android BpkInput should render small disabled correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
      Object {
        "height": 32,
        "padding": 8,
      },
    ]
  }
>
  <TextInput
    editable={false}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
        },
        Object {
          "color": "rgb(230, 228, 235)",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`Android BpkInput should render small invalid correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
      Object {
        "height": 32,
        "padding": 8,
      },
      undefined,
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
        Object {
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkInput should render small placeholder correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
      Object {
        "height": 32,
        "padding": 8,
      },
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
        },
        Object {
          "fontStyle": "italic",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`Android BpkInput should render small valid correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
      Object {
        "height": 32,
        "padding": 8,
      },
      undefined,
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
        Object {
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkInput should render valid correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "padding": 12,
        "width": "auto",
      },
      undefined,
    ]
  }
>
  <TextInput
    editable={true}
    padding={0}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "width": "auto",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
  />
</View>
`;
